fix margin on mobile breakpoint

--- a/static/src/stylesheets/module/facia-pc/_item.scss
+++ b/static/src/stylesheets/module/facia-pc/_item.scss
@@ -55,6 +55,8 @@ $fc-item-gutter: $gs-gutter / 4;
 .fc-item {
     @include mq($until: tablet) {
         width: 100%;
+        padding-left: $fc-item-gutter * 2;
+        padding-right: $fc-item-gutter * 2;
         box-sizing: border-box;
     }
 
