--- a/static/src/stylesheets/module/facia-pc/_slices.scss
+++ b/static/src/stylesheets/module/facia-pc/_slices.scss
@@ -1,7 +1,3 @@
-.fc-slice-wrapper {
-    margin: 0 $gs-gutter/4 * -1;
-}
-
 .fc-slice {
     overflow: hidden;
     margin-left: auto;
